Fix notice message overflow

--- a/view/frontend/web/css/main.css
+++ b/view/frontend/web/css/main.css
@@ -14,3 +14,7 @@
     padding-right: 20px;
     background-size: 13px 13px;
 }
+
+.message-notice {
+    overflow: auto;
+}
